--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
     font-size: 15px;
     
     /* Primary */
-    --var-soft-blue: hsl(215, 51%, 70%);
-    --var-cyan: hsl(178, 100%, 50%);
+    --var-soft-blue: #D4EBF8;
+    --var-cyan: #D4EBF8;
     /* Neutral */
     --var-main-darkest: hsl(217, 54%, 11%);
     --var-card-dark: hsl(216, 50%, 16%);
@@ -58,7 +58,7 @@
     font-weight: 500;
     color: var(--text-dark);
     line-height: 1.75rem;
-  }
+}
   
   .btn {
     padding: 1rem 1.5rem;
@@ -99,11 +99,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d4ebf8",endColorstr="#000000",GradientType=1);
   }
   
-  /* .header {
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat; 
-  }  */
+
   
   nav {
     position: sticky;
@@ -223,11 +219,10 @@
   }
 
   /*search button*/
-  /* From Uiverse.io by Lakshay-art */ 
+
 .grid {
-    
-    background-image: linear-gradient(to right, #0f0f10 1px, transparent 1px),
-      linear-gradient(to bottom, #0f0f10 1px, transparent 1px);
+    background-image: linear-gradient(to right, #D4EBF8 1px, transparent 1px),
+      linear-gradient(to bottom, #D4EBF8 1px, transparent 1px);
     background-size: 1rem 1rem;
     background-position: center center;
     
@@ -249,7 +244,7 @@
     filter: blur(3px);
   }
   .input {
-    background-color: #010201;
+    background-color: var(--black);
     border: none;
     /* padding:7px; */
     width: 301px;
@@ -265,7 +260,7 @@
     justify-content: center; */
   }
   .input::placeholder {
-    color: #c0b9c0;
+    color: var(--white);
   }
   
   .input:focus {
@@ -281,7 +276,7 @@
     width: 100px;
     height: 20px;
     position: absolute;
-    background: linear-gradient(90deg, transparent, black);
+    background: linear-gradient(90deg, transparent, var(--black));
     top: 18px;
     left: 70px;
   }
@@ -290,7 +285,7 @@
     width: 30px;
     height: 20px;
     position: absolute;
-    background: #cf30aa;
+    background: var(--yellow);
     top: 10px;
     left: 5px;
     filter: blur(20px);
@@ -325,10 +320,10 @@
     filter: brightness(1.4);
     background-image: conic-gradient(
       rgba(0, 0, 0, 0) 0%,
-      #a099d8,
+      #D4EBF8,
       rgba(0, 0, 0, 0) 8%,
       rgba(0, 0, 0, 0) 50%,
-      #dfa2da,
+      #f8c238,
       rgba(0, 0, 0, 0) 58%
     );
     animation: rotate 4s linear infinite;
@@ -357,9 +352,9 @@
       #1c191c,
       #402fb5 5%,
       #1c191c 14%,
-      #1c191c 50%,
-      #cf30aa 60%,
-      #1c191c 64%
+      #1c191c 20%,
+      #f8c238 60%,
+      #1c191c 20%
     );
     animation: rotate 4s 0.1s linear infinite;
     transition: all 2s;
@@ -385,7 +380,7 @@
       #18116a,
       rgba(0, 0, 0, 0) 10%,
       rgba(0, 0, 0, 0) 50%,
-      #6e1b60,
+      #f8c238,
       rgba(0, 0, 0, 0) 60%
     );
     transition: all 2s;
@@ -458,7 +453,7 @@
       #402fb5 5%,
       #000 38%,
       #000 50%,
-      #cf30aa 60%,
+      #f8c238 60%,
       #000 87%
     );
     /* change speed here */
@@ -538,8 +533,8 @@
     background-image: conic-gradient(
       rgba(229, 11, 11, 0),
       #3d3a4f,
-      rgba(0, 0, 0, 0) 50%,
-      rgba(0, 0, 0, 0) 50%,
+      rgba(0, 0, 0, 0) 10%,
+      rgba(0, 0, 0, 0) 10%,
       #3d3a4f,
       rgba(0, 0, 0, 0) 100%
     );
@@ -566,7 +561,9 @@ font-family: 'Outfit', sans-serif;
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
 
-
+section {
+  display: flex;
+}
 
 /* 
 =======================
@@ -636,15 +633,20 @@ Classes
 */
 
 /* LAYOUT */
+.section-container{
+  max-width: var(--max-width);
+  margin: auto;
+  padding: 5rem 1rem;
+}
 
 .card-container {
     width: 100%;
-    max-width: 400px;
-    margin: 2em auto;
-    background-color: var(--var-card-dark);
+    max-width: 350px;
+    margin: auto;
+    background-color: var(--black);
     border-radius: 15px;
     margin-bottom: 1rem;
-    padding: 2rem;
+    padding: 1.5rem;
 }
 
 div.flex-row {
@@ -652,19 +654,20 @@ div.flex-row {
     justify-content: space-between;
     align-items: center;
 }
+
 .level {
   color: rgb(230, 204, 89);
 }
 
-
 div.time-left, .card-attribute {
     display: flex;
     align-items: center;
-    padding: 1em 0;
+    padding: 1em;
 }
 
 .card-attribute {
-    padding-bottom: 1.5em;
+    text-align: center;
+    padding-bottom: 1em;
     border-top: 2px solid var(--var-line-dark);
 }
 
@@ -697,10 +700,10 @@ img.eye {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 5rem;
-    background-color: hsla(178, 100%, 50%, 0.3);
+    background-color: hsla(51, 82%, 49%, 0.3);
     width: 100%;
     height: 100%;
-    border-radius: 1rem;
+    border-radius: 15px;
     position: absolute;
     top: 0;
     left: 0;
@@ -717,6 +720,8 @@ img.eye {
 .small-image {
     width: 1.2em;
     margin-right: .5em;
+    
+
 }
 
 .small-avatar {
@@ -732,10 +737,10 @@ div.attribution {
     font: var(--var-para);
     text-align: center;
     padding: 1.5em 0 4em 0;
-    color: var(--var-line-dark);
+    color: var(--darknavy-color);
 }
 .attribution a {
-    color: var(--var-soft-blue);
+    color: var(--yellow);
 }
 
 @media (min-width:600px) {
