--- a/css/style1.css
+++ b/css/style1.css
@@ -93,11 +93,11 @@
   body {
     font-family: "Montserrat", sans-serif;
     background: rgb(212,235,248);
-    background: -moz-linear-gradient(90deg, rgba(212,235,248,1) 0%, rgba(31,80,154,1) 20%, rgba(10,57,129,1) 30%, rgba(0,0,0,1) 58%);
-    background: -webkit-linear-gradient(90deg, rgba(212,235,248,1) 0%, rgba(31,80,154,1) 20%, rgba(10,57,129,1) 30%, rgba(0,0,0,1) 58%);
-    background: linear-gradient(90deg, rgba(212,235,248,1) 0%, rgba(31,80,154,1) 20%, rgba(10,57,129,1) 30%, rgba(0,0,0,1) 58%);
+    background: -moz-linear-gradient(130deg, rgba(212,235,248,1) 0%, rgba(31,80,154,1) 20%, rgba(10,57,129,1) 30%, rgba(0,0,0,1) 58%);
+    background: -webkit-linear-gradient(130deg, rgba(212,235,248,1) 0%, rgba(31,80,154,1) 20%, rgba(10,57,129,1) 30%, rgba(0,0,0,1) 58%);
+    background: linear-gradient(130deg, rgba(212,235,248,1) 0%, rgba(31,80,154,1) 20%, rgba(10,57,129,1) 30%, rgba(0,0,0,1) 58%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d4ebf8",endColorstr="#000000",GradientType=1);
-  }
+      }
   
 
   
@@ -639,7 +639,7 @@ Classes
   padding: 5rem 1rem;
 }
 
-.card-container {
+.restaurants-list {
     width: 100%;
     max-width: 350px;
     margin: auto;
