--- a/views/restaurant.html
+++ b/views/restaurant.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="../public/imgs/logo-2.png" style="width: 60px; border-radius: 10px;">
+        <img src="/public/imgs/TangierEatsLogo.png" style="width: 60px; border-radius: 10px;">
         <div class="search-container">
             <input type="text" placeholder="Search for Restaurants, Cuisines, Location..." oninput="searchRestaurant(this.value)" class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
